2007-10-02  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, T2h_i18n.pm: keep the state in the global hash
	and use it in translations.
	* texi2html.pl, texi2html.init, examples/*, doc/*: modify the 
	normal_text function reference API, add an input variable true 
	if in simple text.
	* Tests/formatting/*: test for symbols kept in preformatted and 
	@-commands in @*ref appearing in @example.

2007-10-02  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: remove trailing new line in @html block (report 
	from Graham Percival).
	* Tests/formatting/block_EOL.texi: test for end of lines in raw
	block formatting.

2007-10-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: Handle @end commands entered as
	misc commands like other misc commands during pass_text.
	Don't add a space after an @end command, and don't remove it 
	when there is no reason to.
	Handle right @end block commands followed by something else than a
	spacing character (report from Graham Percival).
	* Tests/formatting/symbol_after_block.texi: test for symbols after
	@end block commands.

2007-09-30  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: don't have # perl on the shebang line. Report by
	Martin Koeppe.

2007-09-27  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: handle @textdegree, @hyphenation.
	* texi2html.pl, texi2html.init: reset the language for each 
	appearance of @documentlanguage (except if language was set on the
	command line). For a language like pt_BR, try pt_BR, and, if not 
	found, use pt.
	add a new function reference, print_element_header to print the 
	beginning of an element, to be able to print it right when it
	is ready, and not when starting the next element.
	Add --css-ref and --transliterate-file-names options.
	@set, @clear are kept for later passes.
	Many @-commands are now handled equally in pass_structure and 
	pass_text, and are reset at the beginning of the pass.